# ai_home

./: .gitignore  .gitmodules  AGENTS.md  AUTO_BUILD_SETUP.md  CLAUDE.md  GEMINI.md  README.md  README_en.md  WEB_IMPLEMENTATION_SUMMARY.md  WEB_QUICKSTART.md  gitleaks-report.json  package-lock.json  package.json  pnpm-lock.yaml  repl-import-check.js
.claude/: settings.local.json
docs/: APIKEY_CONFIG_FIX.md  CODEX_APIKEY_PERSISTENCE.md  CONFIG_ISOLATION_FIX.md  CONFIG_SYNC_MECHANISM.md  CUSTOM_PROVIDER_PER_ACCOUNT.md  FULL_ACCESS_PERMISSIONS.md  MIGRATE_CONFIG_TOML.md  MIGRATION_SUMMARY.md  MULTI_ACCOUNT_ISOLATION.md  STATUSLINE_OPTIMIZATION.md  STATUS_API_KEY_CONFIG_FIX.md  TOKEN_AUTO_REFRESH.md  WEBSOCKET_APIKEY_FIX.md  WEBSOCKET_PROXY_DESIGN.md  WEB_UI.md  WINDOWS_SPAWN_FIX.md  aih-skills-roadmap.md  current-webui-acceptance-checklist.md  gateway-failover-rootcause.md  model-cache-cold-start-issue.md  web-chat-acceptance-todo.md  web-provider-event-matrix.md  web-session-acceptance-todo.md  webui-native-roadmap.md
lib/: control-endpoint.js  provider-catalog-data.json  provider-catalog.js  provider-native-capability-registry.js
logs/: healthcheck-sweep-t010.json  runtime-metrics-20260302-001725.json  runtime-metrics-t009.json  session-orphan-cleaner-t012-verify.json  session-orphan-cleaner-t012.json
scripts/: add-codex-provider.sh  ai-ui-delegate.js  aih-provider-session-hook-sender.js  align-codex-session-providers.js  build-web.sh  chat-runtime-real-codex-smoke.js  chat-runtime-smoke-evidence.js  chat-runtime-smoke-interaction.js  chat-runtime-smoke-secret-probe.js  cleanup-codex-free-accounts.js  fabric-browser-broker-profile-smoke-server.js  fabric-browser-pairing-smoke-server.js  fabric-cloud-edge-preflight.js  fabric-default-udp-probe.js  fabric-m3-daemon-preflight.js  fabric-m6-prerequisite-audit.js  fabric-m6-promotion-gate.js  fabric-m6-relay-durability-gate.js  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  blob_store.rs  commands.rs  endpoint.rs  error.rs  lan_route_trust.rs  main.rs  profile_store.rs  secret_store.rs  server_discovery.rs  server_http.rs  server_id.rs  server_route_runtime.rs  smoke_driver.rs  stream_registry.rs  tray.rs
(+1769 files in other folders)
